[package]
name = "nodock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-rs = "0.10.0"
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"
